list cinemas by filmId
